--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
+    "highcharts": "4.x.x",
     "intl": "^1.2.5",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionic2-calendar": "^0.3.11",
     "ionicons": "3.0.0",
     "moment": "^2.19.1",
+    "ng2-highcharts": "^1.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
