--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "surge": "surge -p ./www -d ionic3-components.surge.sh",
+    "deploy":
+      "ionic-app-scripts build --prod && surge -p ./www -d ionic3-components.surge.sh"
   },
   "dependencies": {
     "@angular/common": "4.4.3",
@@ -54,8 +57,6 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": ["android"]
   }
 }
