--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve",
     "surge": "surge -p ./www -d ionic3-components.surge.sh",
-    "deploy":
-      "ionic-app-scripts build --prod && surge -p ./www -d ionic3-components.surge.sh"
+    "deploy": "ionic-app-scripts build --prod && surge -p ./www -d ionic3-components.surge.sh"
   },
   "dependencies": {
     "@angular/common": "4.4.3",
@@ -27,6 +26,7 @@
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
+    "chart.js": "^2.7.1",
     "cordova-android": "6.3.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -39,6 +39,7 @@
     "ionic2-calendar": "^0.3.11",
     "ionicons": "3.0.0",
     "moment": "^2.19.1",
+    "ng2-charts": "^1.6.0",
     "ng2-highcharts": "^1.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
@@ -57,6 +58,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {}
     },
-    "platforms": ["android"]
+    "platforms": [
+      "android"
+    ]
   }
 }
