--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/date-picker": "^4.3.3",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
     "chart.js": "^2.7.1",
-    "cordova-android": "6.3.0",
+    "cordova-android": "^6.3.0",
+    "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
@@ -37,6 +39,7 @@
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionic2-calendar": "^0.3.11",
+    "ionic3-datepicker": "^2.5.1",
     "ionicons": "3.0.0",
     "moment": "^2.19.1",
     "ng2-charts": "^1.6.0",
@@ -56,7 +59,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-datepicker": {}
     },
     "platforms": [
       "android"
