--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
+    "angular-vertical-timeline": "^0.1.1",
     "chart.js": "^2.7.1",
     "cordova-android": "^6.3.0",
     "cordova-plugin-datepicker": "^0.9.3",
