--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve",
     "surge": "surge -p ./www -d ionic3-components.surge.sh",
-    "deploy": "ionic-app-scripts build --prod && surge -p ./www -d ionic3-components.surge.sh"
+    "deploy":
+      "ionic-app-scripts build --prod && surge -p ./www -d ionic3-components.surge.sh"
   },
   "dependencies": {
-    "@angular/common": "4.4.3",
-    "@angular/compiler": "4.4.3",
-    "@angular/compiler-cli": "4.4.3",
-    "@angular/core": "4.4.3",
-    "@angular/forms": "4.4.3",
-    "@angular/http": "4.4.3",
-    "@angular/platform-browser": "4.4.3",
-    "@angular/platform-browser-dynamic": "4.4.3",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
     "@ionic-native/core": "4.3.2",
     "@ionic-native/date-picker": "^4.3.3",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "2.1.3",
     "angular-vertical-timeline": "^0.1.1",
     "chart.js": "^2.7.1",
     "cordova-android": "^6.3.0",
@@ -37,21 +38,21 @@
     "cordova-plugin-whitelist": "^1.3.1",
     "highcharts": "4.x.x",
     "intl": "^1.2.5",
-    "ionic-angular": "3.7.1",
+    "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
-    "ionic2-calendar": "^0.3.11",
+    "ionic2-calendar": "^0.4.0",
     "ionic3-datepicker": "^2.5.1",
     "ionicons": "3.0.0",
     "moment": "^2.19.1",
     "ng2-charts": "^1.6.0",
     "ng2-highcharts": "^1.0.0",
-    "rxjs": "5.4.3",
+    "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.0.1",
-    "typescript": "2.3.4"
+    "@ionic/app-scripts": "3.1.0",
+    "typescript": "2.4.2"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -63,8 +64,6 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-datepicker": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": ["android"]
   }
 }
