--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve",
     "surge": "surge -p ./www -d ionic3-components.surge.sh",
-    "deploy":
-      "ionic-app-scripts build --prod && surge -p ./www -d ionic3-components.surge.sh"
+    "deploy": "ionic-app-scripts build --prod && surge -p ./www -d ionic3-components.surge.sh"
   },
   "dependencies": {
     "@angular/common": "5.0.0",
@@ -29,6 +28,7 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
     "angular-vertical-timeline": "^0.1.1",
+    "ap-angular2-fullcalendar": "^1.3.6",
     "chart.js": "^2.7.1",
     "cordova-android": "^6.3.0",
     "cordova-plugin-datepicker": "^0.9.3",
@@ -64,6 +64,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-datepicker": {}
     },
-    "platforms": ["android"]
+    "platforms": [
+      "android"
+    ]
   }
 }
