--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.0",
+    "surge": "^0.19.0",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
